# zedui

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  事件设计文档.md
demo/: CMakeLists.txt  main.cc
zedbase/: CMakeLists.txt
zedbase/include/zedbase/: auto_reset.h  closure.h  delayed_task.h  log_level.h  log_settings.h  logging.h  macros.h  make_copyable.h  message_loop.h  message_loop_impl.h  message_loop_task_queues.h  ref_counted_internal.h  ref_ptr.h  ref_ptr_internal.h  task_queue_id.h  task_runner.h  task_runner_window.h  task_source.h  task_source_grade.h  thread.h  time_point.h  ui_task_runner.h  unique_object.h  wakeable.h
zedbase/include/zedbase/containers/: contains.h
zedbase/include/zedbase/memory/: ptr_util.h  ref_counted.h  ref_counted_internal.h  ref_ptr.h  ref_ptr_internal.h  task_runner_checker.h  thread_checker.h  weak_ptr.h  weak_ptr_internal.h
zedbase/include/zedbase/synchronization/: waitable_event.h
zedbase/include/zedbase/time/: time_delta.h  time_point.h
zedbase/include/zedbase/timer/: elapsed_timer.h  timer.h
zedbase/src/: delayed_task.cc  log_settings.cc  log_settings_state.cc  logging.cc  message_loop.cc  message_loop_impl.cc  message_loop_task_queues.cc  task_runner.cc  task_runner_window.cc  task_source.cc  thread.cc  time_point.cc  ui_task_runner.cc
zedbase/src/memory/: task_runner_checker.cc  thread_checker.cc  weak_ptr_internal.cc
zedbase/src/platform/: message_loop_win.cc
zedbase/src/synchronization/: waitable_event.cc
zedbase/src/time/: time_point.cc
zedbase/src/timer/: elapsed_timer.cc  timer.cc
zedui/: CMakeLists.txt  main.cc
zedui/base/: macros.h  task_runner.cc  task_runner.h  task_runner_window.cc  task_runner_window.h  time_delta.h  time_point.cc  time_point.h  utils.cc  utils.h
zedui/core/: dpi_utils.cc  dpi_utils.h  graphics.cc  graphics.h  win32_window.cc  win32_window.h  zedui_window.cc  zedui_window.h
zedui/include/zedui/: app.h
zedui/include/zedui/controls/: container.h  control.h  rectangle.h  ui_container.h  ui_element.h
zedui/include/zedui/events/: event.h  event_dispatcher.h  event_handler.h  event_processor.h  event_sink.h  event_source.h  event_target.h  event_target_impl.h  event_targeter.h  event_type.h
zedui/include/zedui/geometry/: README.md  constants.h  float.h  matrix.h  matrix_decomposition.h  point.h  quaternion.h  rect.h  saturated_math.h  scalar.h  shear.h  size.h  type_traits.h  vector.h
zedui/include/zedui/render/: container_layer.h  (+8 more)
zedui/resources/: resource.h  zedui.rc
zedui/src/: app.cc  dpi_utils.cc  win32_window.cc
zedui/src/controls/: container.cc  control.cc  rectangle.cc  ui_container.cc  ui_element.cc
zedui/src/events/: event.cc  event_dispatcher.cc  event_handler.cc  event_processor.cc  event_target.cc  event_targeter.cc
zedui/src/geometry/: quaternion.cc  vector.cc
zedui/src/render/: container_layer.cc  d2d_Renderer.cc  draw_context.cc  layer.cc  picture_layer.cc  scene_builder.cc
zedui/src/utils/: dpi_utils.cc  ui_task_runner.cc  ui_task_runner_window.cc
zedui/src/views/: container_view.cc  render_view.cc  root_view.cc  view.cc  view_targeter.cc  view_targeter_delegate.cc
zedui/src/widgets/: native_widget.cc  native_widget_win32.cc  widget.cc
zedui/src/window/: platform_window.cc  platform_window_win.cc  win32_window.cc  window_event_dispatcher.cc
zedui/src/windows/: win32_window.cc  window.cc
(+33 files in other folders)
